# dissertacao

./: .gitignore  Conjunctions_43618_2026131T12_0.csv  Conjunctions_43618_2026131T20_36.csv  Conjunctions_47699_2026131T18_30.csv  Conjunctions_47699_202621T19_1.csv  Conjunctions_47699_202621T19_2.csv  Conjunctions_47699_202621T19_33.csv  Dockerfile  README.md  conjunctions_47699_1769975139.json  deploy_vizier_worker.sh  download_tle.py  generate_sec_tables.py  maneuvers2.txt  maneuvers_bash.sh  plot_3d_tca.py  plot_ellipsoid_matplotlib.py  plot_miss_distance.py  pyproject.toml  satellites_list.txt  sec_tables.tex  specific_tles.json  test_hipp.py
app/: bigquery_adapter.py  download_all_tles.py  models.py  orekit_config.py  test_propagation.py
cenario1/: 61046_seed_10_top5_threats.json  61046_seed_2_solution.json  61046_seed_3_top5_threats.json  61046_seed_5_solution.json  61046_seed_6_solution.json  64830_optimization_solutions_1771890878.json  64830_seed_1_solution.json  64830_seed_6_solution.json  64830_seed_8_top5_threats.json  65774_optimization_solutions_1771892946.json  65774_seed_10_top5_threats.json  65774_seed_1_top5_threats.json  65774_seed_2_top5_threats.json  65774_seed_4_solution.json  65774_seed_7_solution.json  65774_seed_7_top5_threats.json  65774_seed_9_solution.json  compare_maneuver.py  conjunctions_pipeline.py  maestro_pipeline.py  optimize_maneuver.py  optimize_maneuver_vizier.py  verify_bounds.py
cenario2/: compare_tle_ephemeris.py  plot_ephemeris.py  recalculate_conjunction.py  run_extension_for_all.py  screening_ephemeris_pipeline.py  (+1 more)
(+98 files in other folders)
