[project]
name = "dissertacao"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flake8>=7.3.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "orekit-jpype>=13.1.3.0",
    "pymoo>=0.6.1.6",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "google-cloud-aiplatform>=1.60.0",
    "google-cloud-bigquery>=3.25.0",
]
